Radial Symmetry in Sculpt Mode does not work with Clipping Region #81466

Closed
opened 2020-10-05 20:04:17 +02:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: 2.90.1 release, 2.91 alpha a4f8b2ad76

Short description of error
Clipping Region (Alt + B) can be used to hide parts of the view. This does not normally affect whether these areas can still be edited (e. g. in Edit Mode).
In Sculpt Mode, if a part is hidden using Clipping Region, and regular Axis Symmetry is used, it works as expected. (I.e. changes also show up on the hidden half.)

However, if used with Radial Symmetry is used instead, changes do not show up in the hidden region!

Exact steps for others to reproduce the error
SculptRadialSymmetry.blend

Axis Symmetry (works correctly)

  1. Enter Sculpt Mode
  2. Turn on X-Symmetry.
  3. Press Alt+B and draw a rectangle, such that one half is hidden.
  4. Sculpt a bit.
  5. Press Alt+B again to disable clipping. Observe that changes have also been applied to the hidden half.

Radial Symmetry (does not work!)
6. Reload the file.
7. Enter Sculpt Mode.
8. Set the Radial Z Symmetry to '2'.
9. Press Alt+B and draw a rectangle, such that one half is hidden.
10. Sculpt a bit.
11. Press Alt+B again to disable clipping. Observe that changes have NOT been applied to the hidden half.

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: 2.90.1 release, 2.91 alpha a4f8b2ad7653 **Short description of error** *Clipping Region* (Alt + B) can be used to hide parts of the view. This does not normally affect whether these areas can still be edited (e. g. in Edit Mode). In Sculpt Mode, if a part is hidden using *Clipping Region*, and regular Axis Symmetry is used, it works as expected. (I.e. changes also show up on the hidden half.) However, if used with Radial Symmetry is used instead, changes do not show up in the hidden region! **Exact steps for others to reproduce the error** [SculptRadialSymmetry.blend](https://archive.blender.org/developer/F8958567/SculptRadialSymmetry.blend) *Axis Symmetry* (works correctly) 1. Enter Sculpt Mode 2. Turn on X-Symmetry. 3. Press Alt+B and draw a rectangle, such that one half is hidden. 4. Sculpt a bit. 5. Press Alt+B again to disable clipping. Observe that changes have also been applied to the hidden half. *Radial Symmetry* (does not work!) 6. Reload the file. 7. Enter Sculpt Mode. 8. Set the Radial Z Symmetry to '2'. 9. Press Alt+B and draw a rectangle, such that one half is hidden. 10. Sculpt a bit. 11. Press Alt+B again to disable clipping. Observe that changes have **NOT** been applied to the hidden half.

Added subscriber: @Foaly

Added subscriber: @Foaly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check on this.

Can confirm, will check on this.
Philipp Oeser self-assigned this 2020-10-06 12:28:44 +02:00

This issue was referenced by c11ae5cd21

This issue was referenced by c11ae5cd21259a991b3cb1febdd4184fa62d789a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81466
No description provided.